# server-bastion

./: LICENSE  README.md  install.sh  pyproject.toml
config/: example.yaml
src/bastion/: __init__.py  __main__.py  cli.py  config.py  output.py  runner.py
src/bastion/commands/: __init__.py  audit.py  fail2ban.py  firewall.py  health.py  malware.py  nginx.py  postgres.py  ssl.py  tune.py
src/bastion/profiles/: __init__.py  database.yaml  webserver.yaml
src/bastion/templates/: __init__.py
src/bastion/templates/fail2ban/filter.d/: nginx-botsearch.conf  nginx-script-scan.conf
src/bastion/templates/fail2ban/jail.d/: nginx-botsearch.conf  nginx-http-auth.conf  nginx-script-scan.conf  sshd.conf
src/bastion/templates/nginx/: cloudflare-allow.conf  cloudflare-realip.conf  cloudflare-refresh.sh
tests/: conftest.py  test_config.py  test_fail2ban.py  test_firewall.py  test_malware.py  test_nginx.py  test_postgres.py  test_runner.py  test_tune.py
